--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,9 @@
-FROM python:3.11
+FROM python:3.9
 
-WORKDIR /app
-COPY frontend/requirements.txt .
+WORKDIR /frontend
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY frontend/. /app
-EXPOSE 1338
+# EXPOSE 1338
+ENV FLASK_APP=frontend/app.py
 CMD ["flask", "run", "--host", "0.0.0.0", "--port", "1338"]
