--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,13 @@ services:
     build:
       context: .
       dockerfile: backend/Dockerfile
-    volumes:
-      - .:/backend
     ports:
       - 1337:1337
     depends_on:
       - database
+    # environment:
+    #   - SQLALCHEMY_DATABASE_URI=postgresql://hangman:h4ngm4npa55w0rd@hangman_database:5432/hangman_db
+    #   - SQLALCHEMY_MAX_POOL_OVERFLOW=20
     env_file:
       - .env
     networks:
@@ -24,6 +25,10 @@ services:
       - postgre:/var/lib/postgresql/data/
     expose:
       - 5432
+    # environment:
+    #   - POSTGRES_USER=hangman
+    #   - POSTGRES_PASSWORD=h4ngm4npa55w0rd
+    #   - POSTGRES_DB=hangman_db
     env_file:
       - .env
     networks:
