change requirements path

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.9
 
 WORKDIR /frontend
-COPY requirements.txt .
+COPY frontend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY frontend/. /frontend
 EXPOSE 1338
